--- a/create_autonomy/create_description/package.xml
+++ b/create_autonomy/create_description/package.xml
@@ -12,13 +12,14 @@
 
   <author email="jacob@openrobotics.org">Jacob Perron</author>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>rclcpp</buildtool_depend>
+
+  <build_depend>roslaunch</build_depend>
 
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>urdf</exec_depend>
   <exec_depend>xacro</exec_depend>
 
   <export>
-    <build_type>ament_cmake</build_type>
   </export>
 </package>
