--- a/create_autonomy/create_robot/package.xml
+++ b/create_autonomy/create_robot/package.xml
@@ -4,23 +4,23 @@
   <version>1.3.0</version>
   <description>ROS driver for iRobot's Create 1 and 2, based on the libcreate C++ library</description>
 
-  <maintainer email="jacob@openrobotics.org">Jacob Perron</maintainer>
+  <maintainer email="u651601f@gmail.com">Kousuke Takeuchi</maintainer>
 
   <license>BSD</license>
 
   <url type="website">http://wiki.ros.org/create_robot</url>
   <url type="repository">http://github.com/autonomylab/create_robot</url>
 
-  <author email="jacob@openrobotics.org">Jacob Perron</author>
+  <author email="u651601f@gmail.com">Kousuke Takeuchi</author>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>rclcpp</buildtool_depend>
 
-  <exec_depend>create_bringup</exec_depend>
+  <!-- <exec_depend>create_bringup</exec_depend> -->
   <exec_depend>create_description</exec_depend>
-  <exec_depend>create_driver</exec_depend>
-  <exec_depend>create_msgs</exec_depend>
+  <!-- <exec_depend>create_driver</exec_depend>
+  <exec_depend>create_msgs</exec_depend> -->
 
   <export>
-    <build_type>ament_cmake</build_type>
+    <metapackage/>
   </export>
 </package>
