--- a/create_autonomy/create_driver/setup.cfg
+++ b/create_autonomy/create_driver/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/tello_nav
+script-dir=$base/lib/create_driver
 [install]
-install-scripts=$base/lib/tello_nav
+install-scripts=$base/lib/create_driver
