--- a/create_autonomy/create_msgs/CMakeLists.txt
+++ b/create_autonomy/create_msgs/CMakeLists.txt
@@ -1,22 +1,48 @@
 cmake_minimum_required(VERSION 3.5)
 project(create_msgs)
 
-find_package(ament_cmake REQUIRED)
+find_package(builtin_interfaces REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
 find_package(std_msgs REQUIRED)
 
-set(msg_files
-  msg/Bumper.msg
-  msg/ChargingState.msg
-  msg/DefineSong.msg
-  msg/Mode.msg
-  msg/PlaySong.msg
-)
+# Default to C99
+if(NOT CMAKE_C_STANDARD)
+  set(CMAKE_C_STANDARD 99)
+endif()
 
-rosidl_generate_interfaces(
-  ${PROJECT_NAME}
-  ${msg_files}
-  DEPENDENCIES std_msgs)
+# Default to C++14
+if(NOT CMAKE_CXX_STANDARD)
+  set(CMAKE_CXX_STANDARD 14)
+endif()
 
-ament_export_dependencies(rosidl_default_runtime std_msgs)
+if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  add_compile_options(-Wall -Wextra -Wpedantic)
+endif()
+
+# find dependencies
+find_package(ament_cmake REQUIRED)
+# uncomment the following section in order to fill in
+# further dependencies manually.
+# find_package(<dependency> REQUIRED)
+
+if(BUILD_TESTING)
+  find_package(ament_lint_auto REQUIRED)
+  # the following line skips the linter which checks for copyrights
+  # uncomment the line when a copyright and license is not present in all source files
+  #set(ament_cmake_copyright_FOUND TRUE)
+  # the following line skips cpplint (only works in a git repo)
+  # uncomment the line when this package is not in a git repo
+  #set(ament_cmake_cpplint_FOUND TRUE)
+  ament_lint_auto_find_test_dependencies()
+endif()
+
+rosidl_generate_interfaces(${PROJECT_NAME}
+  "msg/Bumper.msg"
+  "msg/ChargingState.msg"
+  "msg/DefineSong.msg"
+  "msg/Mode.msg"
+  "msg/PlaySong.msg"
+  DEPENDENCIES std_msgs
+ )
+
 ament_package()
